Version 10.3 - xxxx edition. 02 November 2022

* New things added:

Added Poke F-Function
Added Visual Real Tape F-Function
Added DSK disk info menu: to get tracks and sectors of a disk
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)

* Improvements:

Improved Debug Console: better refresh, dynamic width??
Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it

Improved View Sprites: sprite is no longer disabled when changing memory pointer

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump and Disassemble

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)

Improved ZX Vision:
- Text input fields now handle repeated keys
- Some text input fields now have history of last items, and history is saved on configuration file

* Fixes:

Fixed +3 disk (and CPC6128?) (PD765) emulation: TODO: add more details here


* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.2 - Hysteria edition. 26 October 2022

* New things added:

Added configurable icons to the ZX Desktop. These icons can:
-Open windows, for example View Sprites
-Trigger actions, like Reset
-File links, these are linked to tapes or snapshots on your disk drive
-There are other special icons, like Trash Can
These icons opens a whole new world on ZEsarUX, so the ZX Desktop is becoming a Full Desktop environment :)

Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C